# Haskell-Memoize

./: README.md  memo.cabal  package.nix  shell.nix  stack.yaml  watch.bat  watch.sh
benchmarks/: Bench.hs
executables/: Main.hs
sources/: Memoize.hs
sources/Memoize/: Core.hs  Example.hs  Extra.hs  Map.hs  Table.hs  Types.hs
tests/: DocTest.hs  PropertyTests.hs  UnitTests.hs
tests/Memoize/: Property.hs  Test.hs
